...
      body: Padding(
        padding: const EdgeInsets.all(16),
        child: Column(
          children: [
            TextField(
                controller: nameCtrl,
                decoration: const InputDecoration(labelText: "Name")),
            TextField(
                controller: emailCtrl,
                decoration: const InputDecoration(labelText: "Email")),
            TextField(
                controller: phoneCtrl,
                decoration: const InputDecoration(labelText: "Phone")),
...
                controller: passCtrl,
                obscureText: true,
                decoration: const InputDecoration(labelText: "Password")),
            const SizedBox(height: 20),
            ElevatedButton(
              onPressed: loading ? null : registerUser,
              child: Text(loading ? "Registering..." : "Register"),
            ),
          ],
        ),
      ),
    );
  }
...
